Apply FindBugs recommendations